--- a/da.html
+++ b/da.html
@@ -10,9 +10,10 @@
     <div>
         <ul class="links">
             <li><a class="active" href="#homelink">Contact</a></li>
-            <li><a href="#link1">About us</a></li>
-            <li><a href="#link4">Home</a></li>
-            <img src="logo.svg" width="45" height="45">
+            <li><a href="#link1">Despre noi</a></li>
+            <li><a href="#link2">Tipuri de motoare</a></li>
+            <li><a href="#link4">Ce este motorul</a></li>
+            <img id="motor_logo" src="logo.svg" width="45" height="45">
         </ul>
     </div>
     <div id="title">Istoria Motoarelor cu ardere interna</div>
@@ -25,7 +26,11 @@
         <hr>
     </div>
     <div>
-        <img id="motor_orig" src="motor_orig.gif" width="300" height="400">
+        <img id="motor_orig" src="motor_orig.gif" width="200" height="300">
+    </div>
+    <span id="near_gif">Căldura introdusă în ciclul care se efectuează în cilindrii motorului se obține prin arderea combustibilului, de obicei un combustibil lichid ca: benzina, motorina sau gazul petrolier lichefiat, dar se pot folosi și combustibili gazoși, ca gazul natural, sau chiar solizi, ca praful de cărbune. Oxigenul necesar arderii se obține din aerul atmosferic. Combustibilul în amestec cu aerul se numește amestec carburant. Arderea poate fi inițiată prin punerea în contact direct a amestecului carburant cu o sursă de căldură sau se poate produce aproape instantaneu în toată masa amestecului caz în care se numește detonație și are un caracter exploziv.</span>
+    <div id="spacing2">
+        <hr>
     </div>
 </body>
 </html>
