--- a/Ce este motorul/ce este motorul.html
+++ b/Ce este motorul/ce este motorul.html
@@ -1,18 +1,18 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="nu.css" />
+    <link rel="stylesheet" href="ce este motorul.css" />
     <title>Istoria Motoarelor cu ardere interna</title>
   </head>
   <body>
     <div class="navbar">
       <div class="stuff">
-        <a href="#link1">Contact</a>
-        <a href="#link2">Despre noi</a>
-        <a href="#link3">Tipuri de motoare</a>
-        <a href="da.html">Ce este motorul ?</a>
+        <a href="../Contact/contact.html">Contact</a>
+        <a href="../Despre noi/despre noi.html">Despre noi</a>
+        <a href="../Tipuri de motoare/tipuri de motoare.html">Tipuri de motoare</a>
+        <a href="ce este motorul.html">Ce este motorul ?</a>
       </div>
-      <img class="logo" src="logo.svg" width="45" height="45" />
+      <img class="logo" src="../logo.svg" width="45" height="45" />
     </div>
     <div id="title">Istoria Motoarelor cu ardere interna</div>
     <hr id="LMAO" />
@@ -28,7 +28,7 @@
     </div>
     <hr id="LMAO2" />
     <div class="lol">
-      <img id="motor_orig" src="motor_orig.gif" width="200" height="300" />
+      <img id="motor_orig" src="Imagini/motor_orig.gif" width="200" height="300" />
       <p id="near_gif">
         Căldura introdusă în ciclul care se efectuează în cilindrii motorului se
         obține prin arderea combustibilului, de obicei un combustibil lichid ca:
@@ -56,7 +56,7 @@
         </p>
     </div>
     <div class="imagineintroducere">
-        <img id="introducere" src="introducere1.png" width="754" height="481" />
+        <img id="introducere" src="Imagini/introducere1.png" width="754" height="481" />
         <p class="introduceretext">A doua mare revoluţie s-a datorat tot mecanismelor cu came, de data aceasta fiind
             vorba de cele din componenţa motoarelor cu ardere internă cu supape, de tip Otto,
             Diesel ori Lenoir. Această etapă din dezvoltarea planetei noastre a avut rolul cel mai
@@ -73,9 +73,9 @@
         </p>
     </div>
     <div class="exempleimagini">
-        <img id="exemple" src="exemplu1.png"/>
-        <img id="exemple" src="exemplu2.png"/>
-        <img id="exemple" src="exemplu3.png"/>  
+        <img id="exemple" src="Imagini/exemplu1.png"/>
+        <img id="exemple" src="Imagini/exemplu2.png"/>
+        <img id="exemple" src="Imagini/exemplu3.png"/>  
     </div>
   </body>
 </html>
