--- a/Despre noi/despre noi.html
+++ b/Despre noi/despre noi.html
@@ -14,5 +14,12 @@
             </div>
             <img class="logo" src="../logo.svg" width="45" height="45" />
           </div>
+          <div id="temporar">
+            <img id="temp" src="../work-in-progress.png" />
+            <p id="texttemp">
+              This page is currently in development<br>
+              Please try again later
+            </p>
+          </div>
     </body>
 </html>
