--- a/Despre noi/despre noi.html
+++ b/Despre noi/despre noi.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="despre noi.css" />
+        <link rel="icon" type="type/x-icon" href="../favicon.ico">
         <title>Despre noi</title>
     </head>
     <body>
