--- a/Tipuri de motoare/tipuri de motoare.html
+++ b/Tipuri de motoare/tipuri de motoare.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="tipuri de motoare.css" />
+        <link rel="icon" type="type/x-icon" href="../favicon.ico">
         <title>Tipuri de motoare</title>
     </head>
     <body>
