--- a/Ce este motorul/ce este motorul.html
+++ b/Ce este motorul/ce este motorul.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="ce este motorul.css" />
+    <link rel="icon" type="type/x-icon" href="../favicon.ico">
     <title>Istoria Motoarelor cu ardere interna</title>
   </head>
   <body>
