--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="contact.css" />
+        <link rel="icon" type="type/x-icon" href="../favicon.ico">
         <title>Contact</title>
     </head>
     <body>
