--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -15,11 +15,20 @@
             </div>
             <img class="logo" src="../logo.svg" width="45" height="45" />
           </div>
-      <div id="temporar">
+      <!--<div id="temporar">
         <img id="temp" src="../work-in-progress.png" />
         <p id="texttemp">
           This page is currently in development<br>
           Please try again later
+        </p>
+      </div>!-->
+      <div id="contact">
+        <p class="contact">
+        Elev la "Colegiul National Calistrat Hogas" Tecuci<br>
+        Clasa a 12 a B<br>
+        Profesor coordonator: Ciocanel Adriana<br>
+        Date de contact: E-Mail: gabrielpohrib77@gmail.com<br>
+        Telefon: 0766199458<br>
         </p>
       </div>
     </body>
