--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -9,9 +9,9 @@
         <div class="navbar">
             <div class="stuff">
               <a href="contact.html">Contact</a>
-              <a href="../Despre noi/despre noi.html">Despre noi</a>
-              <a href="../Tipuri de motoare/tipuri de motoare.html">Tipuri de motoare</a>
-              <a href="../Ce este motorul/ce este motorul.html">Ce este motorul ?</a>
+              <a href="../despre-noi/despre-noi.html">Despre noi</a>
+              <a href="../tipuri-de-motoare/tipuri-de-motoare.html">Tipuri de motoare</a>
+              <a href="../ce-este-motorul/ce-este-motorul.html">Ce este motorul ?</a>
             </div>
             <img class="logo" src="../logo.svg" width="45" height="45" />
           </div>
