--- a/ce-este-motorul/ce-este-motorul.html
+++ b/ce-este-motorul/ce-este-motorul.html
@@ -1,17 +1,17 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="ce este motorul.css" />
+    <link rel="stylesheet" href="ce-este-motorul.css" />
     <link rel="icon" type="type/x-icon" href="../favicon.ico">
     <title>Istoria Motoarelor cu ardere interna</title>
   </head>
   <body>
     <div class="navbar">
       <div class="stuff">
-        <a href="../Contact/contact.html">Contact</a>
-        <a href="../Despre noi/despre noi.html">Despre noi</a>
-        <a href="../Tipuri de motoare/tipuri de motoare.html">Tipuri de motoare</a>
-        <a href="ce este motorul.html">Ce este motorul ?</a>
+        <a class="hover" href="../contact/contact.html">Contact</a>
+        <a class="hover" href="../despre-noi/despre-noi.html">Despre noi</a>
+        <a class="hover" href="../tipuri-de-motoare/tipuri-de-motoare.html">Tipuri de motoare</a>
+        <a class="hover" href="ce-este-motorul.html">Ce este motorul ?</a>
       </div>
       <img class="logo" src="../logo.svg" width="45" height="45" />
     </div>
@@ -43,9 +43,16 @@
         exploziv.
       </p>
     </div>
-    <hr id="LMAO2" />
+    <hr id="LMAO2"/>
+    <div id="cuprins">
+      <div class="cuprins">
+        Cuprins<br>
+        <a href="#introducere">I. Introducere</a>
+      </div>
+    </div>
+    <hr id="LMAO2">
     <div id="title">
-        <h2>
+        <h2 id="introducere">
         I. Introducere
         </h2>
     </div>
@@ -57,7 +64,7 @@
         </p>
     </div>
     <div class="imagineintroducere">
-        <img id="introducere" src="Imagini/introducere1.png" width="754" height="481" />
+        <img id="introducere2" src="Imagini/introducere1.png" />
         <p class="introduceretext">A doua mare revoluţie s-a datorat tot mecanismelor cu came, de data aceasta fiind
             vorba de cele din componenţa motoarelor cu ardere internă cu supape, de tip Otto,
             Diesel ori Lenoir. Această etapă din dezvoltarea planetei noastre a avut rolul cel mai
@@ -78,5 +85,6 @@
         <img id="exemple" src="Imagini/exemplu2.png"/>
         <img id="exemple" src="Imagini/exemplu3.png"/>  
     </div>
+    <hr id="LMAO2">
   </body>
 </html>
