--- a/tipuri-de-motoare/tipuri-de-motoare.html
+++ b/tipuri-de-motoare/tipuri-de-motoare.html
@@ -1,17 +1,17 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="tipuri de motoare.css" />
+        <link rel="stylesheet" href="tipuri-de-motoare.css" />
         <link rel="icon" type="type/x-icon" href="../favicon.ico">
         <title>Tipuri de motoare</title>
     </head>
     <body>
         <div class="navbar">
             <div class="stuff">
-              <a href="../Contact/contact.html">Contact</a>
-              <a href="../Despre noi/despre noi.html">Despre noi</a>
-              <a href="tipuri de motoare.html">Tipuri de motoare</a>
-              <a href="../Ce este motorul/ce este motorul.html">Ce este motorul ?</a>
+              <a href="../contact/contact.html">Contact</a>
+              <a href="../despre-noi/despre-noi.html">Despre noi</a>
+              <a href="tipuri-de-motoare.html">Tipuri de motoare</a>
+              <a href="../ce-este-motorul/ce-este-motorul.html">Ce este motorul ?</a>
             </div>
             <img class="logo" src="../logo.svg" width="45" height="45" />
           </div>
