--- a/ce-este-motorul/ce-este-motorul.html
+++ b/ce-este-motorul/ce-este-motorul.html
@@ -46,8 +46,10 @@
     <hr id="LMAO2"/>
     <div id="cuprins">
       <div class="cuprins">
-        Cuprins<br>
-        <a href="#introducere">I. Introducere</a>
+        <span>Cuprins</span><br>
+        <hr class="underline">
+        <a id="introd" class="hover" href="#introducere">I. Introducere</a><br>
+        <a id="introd" class="hover" href="#revolutie1">II. Prima Revolutie Industriala</a>
       </div>
     </div>
     <hr id="LMAO2">
@@ -86,5 +88,33 @@
         <img id="exemple" src="Imagini/exemplu3.png"/>  
     </div>
     <hr id="LMAO2">
+    <div class="revolutie1">
+      <h2>
+        II. Prima Revolutie Industriala
+      </h2>
+    </div>
+    <div>
+      <p id="cevarevo">
+      Revoluția industrială a început la sfârșitul secolului al XVIII-lea și în primele decenii ale secolului
+      al XIX-lea mai întâi în Anglia, care a reușit să se mențină ca prima putere industrială a lumii până la sfârșitul secolului al
+      XIX-lea. În Franța, revoluția industrială a evoluat lent, începuturile ei datând din
+      jurul anilor 1830. Industrializarea Germaniei a fost marcată de fărâmițarea sa
+      politică, condițiile favorabile declanșării revoluției în acest domeniu fiind create prin anii 1840-1850.
+      Dezvoltarea industrială a SUA a debutat la mijlocul secolului al XIX-lea prin aplicarea unei multitudini de invenții și
+      inovații.Sosirea masivă de emigranți după 1865 a antrenat o puternică dezvoltare a economiei americane și astfel
+      în jurul anului 1900 SUA a devenit prima țară industrială din lume.
+    </p>
+    </div>
+    <div id="descopeririceva">
+      <div class="capdelista">
+        <h2>Descoperirile din domeniul științific au impulsionat apariția unor tehnici și invenții moderne:</h2>
+      </div>
+      <table class="descopeririceva">
+        <td id="lista1">1698 Denis Papin a inventat cazanul cu aburi sub presiune.</td>
+        <td id="lista2">1712 Thomas Newcomen a construit un motor cu aburi prevăzut cu piston și cilindru, însă abia în anul 1776 când James Watt a produs motorul cu aburi perfecționat se consideră că a început revoluția industrială.</td>
+        <td id="lista1">Aceasta s-a manifestat cu precădere în domeniul textil, la început. Astfel John Kay inventează suveica zburătoare care permitea realizarea de țesături mult mai late decât până la acel moment. Apoi la 1765 James Hargreaves inventează mașina de tors și la 1789 Edmund Cartwright războiul de țesut. În acest moment Anglia primește numele de "atelierul lumii".</td>
+        <td id="lista2">Importante descoperiri se fac și în alte domenii, precum în metalurgie : Abraham Darby inventează fonta pe bază de cocs, Wilkinson laminarea oțelului.</td>
+      </table>
+    </div>
   </body>
 </html>
