--- a/ce-este-motorul/ce-este-motorul.html
+++ b/ce-este-motorul/ce-este-motorul.html
@@ -49,7 +49,12 @@
         <span>Cuprins</span><br>
         <hr class="underline">
         <a id="introd" class="hover" href="#introducere">I. Introducere</a><br>
-        <a id="introd" class="hover" href="#revolutie1">II. Prima Revolutie Industriala</a>
+        <a id="introd" class="hover" href="#revolutie1">II. Prima Revolutie Industriala</a><br>
+        <a id="introd" class="hover" href="#revolutie2">III. A 2-A Revolutie Industriala</a><br>
+        <a id="introd" class="hover" href="#revolutie3">IV. A 3-A Revolutie Industriala</a><br>
+        <a id="introd" class="hover" href="#revolutie4">V. A 4-A Revolutie Industriala</a><br>
+        <a id="introd" class="hover" href="#aparitia1">VI. Aparitia si dezvoltarea motoarelor cu ardere interna</a><br>
+        <a id="introd" class="hover" href="#title1">VII. Concluzie</a>
       </div>
     </div>
     <hr id="LMAO2">
@@ -88,7 +93,7 @@
         <img id="exemple" src="Imagini/exemplu3.png"/>  
     </div>
     <hr id="LMAO2">
-    <div class="revolutie1">
+    <div id="revolutie1">
       <h2>
         II. Prima Revolutie Industriala
       </h2>
@@ -116,5 +121,144 @@
         <td id="lista2">Importante descoperiri se fac și în alte domenii, precum în metalurgie : Abraham Darby inventează fonta pe bază de cocs, Wilkinson laminarea oțelului.</td>
       </table>
     </div>
+    <div id="cevarevo1">
+      Aceste progrese au impulsionat fenomenul de „revoluție industrială”.
+    </div>
+    <div id="cevarevo1">
+      Revoluția industrială a fost un proces tehnic complex prin care munca manuală a fost înlocuită cu mașinismul. În acest proces mecanizat muncitorului îi
+      revine rolul de supraveghere, reglare și alimentare a mașinii și control al calității. Revoluția industrială a avut ca efect creșterea producției, dezvoltarea orașelor și a științei.
+    </div>
+    <div id="cevarevo1m">
+      Primul domeniu în care a fost utilizată mașina cu abur a fost industria textilă.
+    </div>
+    <hr id="LMAO2">
+    <div class="sfarsitrevo">
+    <div id="cevarevo1mod">
+      Impactul social al revoluției industriale a marcat dezvoltarea diviziunii sociale a muncii, au apărut noi ramuri de producție, noi centre industriale,
+      s-au impus relațiile economice capitaliste în fața celor feudale. De asemenea, apare clasa mijlocie, categorie ce beneficia de câștiguri financiare rezonabile
+      și care avea un comportament atent față de elitele burgheze sau aristocratice. Se observă o mare schimbare în vestimentație și în investițiile pentru locuințele
+      aspectuoase și confortabile. Dintre toate clasele sociale se afirmă burghezia, cea care este o clasă de bază a societății capitaliste.
+      <img id="sfarsitrevo" src="Imagini/Maquina_vapor_Watt_ETSIIM.jpg">
+    </div>
+    <div id="cevarevo1">
+      Impactul tehnic a provocat o puternică impulsionare în domeniul invențiilor, apar fabrici, uzine, iar munca manuala se înlocuiește cu cea mecanizată. O importantă
+      invenție a fost făcută în anul 1760, când James Watt a inventat Motorul cu abur, care a început să fie utilizat în diferite ramuri ale industriei. În anul 1829 inventatorul
+      și inginerul englez George Stephenson inaugurează locomotiva „Racheta”, care este considerată prima locomotivă rentabilă.
+    </div>
+  </div>
+  <hr id="LMAO2">
+  <div id="revolutie2">
+    <h2>
+      III. A 2-A Revolutie Industriala
+    </h2>
+  </div>
+  <div id="cevarevo2">
+    A doua revolutie industrial avut loc la sfârșitul secolului 19 și a culminat cuapariția unei noi surse de energie : electricitatea.Principala caracteristică a acestei perioade
+    a fost schimbarea puterii industrialeîn lume. Până la mijlocul secolului al XIX-lea, Regatul Unit era liderul mondialîn domeniul construcției de mașini, datorită contribuțiilor
+    sale în timpul primeirevoluții industriale. Pentru a doua etapă a acestei schimbări globale, Germaniași Statele Unite au devenit principalii producători industriali ai planetei.
+  </div>
+  <hr id="LMAO2">
+  <div id="revolutie3">
+    <h2>
+      IV. A 3-A Revolutie Industriala
+    </h2>
+  </div>
+  <div id="cevarevo3">
+    Începe în cea de-a doua jumătate a secolului 20 și se întrepătrunde într-ooarecare măsură cu cea de-a patra, care se desfășoară chiar în zilele noastre.Această revoluție își va
+    avea originea în Statele Unite, Japonia și Europa. Bazasa principală ar fi apariția noilor tehnologii, în special a tehnologiilorinformaționale. În acest sens, Internetul și toate
+    invențiile dezvoltate de peInternet au fost elementul care a provocat cele mai multe transformări pentru planetă.Principala consecință a celei de-a treia revoluții industriale a fost
+    globalizarea. Noile forme de comunicare, transportul îmbunătățit și existența informațiilor
+    globale au făcut ca economia, cultura și politica din toate părțile planetei să fiecomplet corelate.Dezvoltarea noilor tehnologii a dat naștere unor noi domenii de cercetare, înspecial
+    cea spațială și în domeniul biotehnologiei. A luat naștere o nouă eră aautomatizării proceselor de producție și apariția roboților industriali
+  </div>
+  <hr id="LMAO2">
+  <div id="revolutie4">
+    <h2>
+      V. A 4-A Revolutie Industriala
+    </h2>
+  </div>
+  <div id="cevarevo4">
+    A patra revolutie industriala , spre deosebire de celelalte , evolueaza cu o vitezaintr-un ritm exponential, noile tehnologii generează tehnologii mai noi și din ceîn ce mai capabile.
+    Aceasta se bazeaza pe revolutia digitala unde combina maimulte tehnologii si implica transformarea sistemelor intregi, in interiorul tarilor,companiilor, industiilor si societatii.Vehiculele,
+    in ziua de astazi nu mai sunt o surpriza pentru nimeni :mașinafară șofer un exemplu bun care domina in ziua de astazi, dar există multe altevehicule autonome,inclusiv camioane, drone, avioane și bărci.
+    Pe măsură ce progresează tehnologiile precum senzorii și inteligența artificială, capacitățiletuturor acestor mașini autonome se îmbunătăesc într-un ritm rapid.
+  </div>
+  <div id="cevarevo4">
+    Modelul ubar din ziua de astazi reflecta puterea perturbatoare a tehnologiei,
+    aceste platforme se inmultutesc rapid pentru a oferii noi servicii, de la
+    cumparaturi pana la partajarea plimbarilor pe distante lungi.
+    Relaţiile industriale se vor schimba pe măsură ce robotizarea va avansa. Chiar
+    daca tehnologia are un impact pozitiv asupra cresterii economice, aceasta are si
+    un impact negative de piata muncii, in ultimii ani au fost dovezi care au aratat,
+    inlocuirea Relaţiile industriale se vor schimba pe măsură ce robotizarea va
+    avansa.
+  </div>
+  <hr id="LMAO2">
+  <div id="aparitia1">
+    <h2>
+      Aparitia si dezvoltarea, motoarelor cu ardere interna cu supape de tip otto sau diesel, legata de cea a automobilelor
+    </h2>
+  </div>
+  <div id="aparitie1">
+    În anul 1680, fizicianul olandez, Christian Huygens, proiectează primul motor cu ardere internă. În 1807, elvețianul Francois Isaac de Rivaz inventează un motor cu ardere internă care utiliza drept
+    combustibil un amestec lichid de hidrogen și oxigen. Automobilul proiectat de Rivaz pentru noul său motor a fost însă un mare insucces, astfel încât și motorul său a trecut pe linie moartă, neavând o aplicație
+    imediată. În 1824, inginerul englez Samuel Brown adaptează un motor cu aburi determinându-l să funcționeze cu benzină.
+    <img id="imgaparitie1" src="Imagini/aparitie1.png">
+  </div>
+  <div id="aparitie2">
+    În 1858, inginerul născut în Belgia, Jean Joseph Etienne Lenoir, a inventat și a patentat (1860) un motor cu dublă pornire prin scânteie electrică prin combustie internă alimentat cu gaz lichid extras din cărbune. În 1863,
+    Lenoir a atașat și a îmbunătățit motorul (folosind petrolul și un carburator rudimentar) pentru o căruță pe trei roți care a reușit o călătorie istorică de 50 de mile pe șosea. Acesta este practic primul motor real cu ardere
+    internă cu aprindere electrică prin scânteie, acesta fiind un motor ce funcționa în doi timpi. În 1863, tot belgianul Lenoir este cel care adaptează la motorul său un carburator făcându-l să funcționeze cu gaz petrolier (sau benzină).
+    <img id="imgaparitie2" src="Imagini/aparitie2.png">
+  </div>
+  <div id="aparitie3">
+    În anul 1862, inginerul francez Alphonse Beau de Rochas brevetează pentru prima oară motorul cu ardere internă în patru timpi (fără însă a-l construi). În 1864, inginerul austriac Siegfried Marcus a construit un motor cu un cilindru
+    carburator (improvizat) rudimentar și a adaptat motorul său pentru o cursă îngreunată de 500 de picioare. Este meritul inginerilor germani Eugen Langen și Nikolaus August Otto de a construi (realiza fizic, practic, modelul teoretic al
+    francezului Rochas) primul motor cu ardere internă în patru timpi, în anul 1866, având aprinderea electrică, carburația și distribuția într-o formă avansată. Zece ani mai târziu, (în 1876), Nikolaus August Otto își brevetează motorul său.
+    <img id="imgaparitie3" src="Imagini/aparitie3.png">
+  </div>
+  <div id="aparitie4">
+    În același an (1876), Sir Dougald Clerk pune la punct motorul în doi timpi al belgianului Lenoir (aducându-l la forma cunoscută și azi). În 1885, Gottlieb Daimler aranjează un motor cu ardere internă în patru timpi cu un singur cilindru așezat
+    vertical și cu un carburator îmbunătățit montat prima dată pe o motocicletă. Un an mai târziu, și compatriotul său Karl Benz aduce unele îmbunătățiri motorului în patru timpi pe benzină.
+  </div>
+  <div id="imgaparitie4">
+    <img id="imgaparitie4" src="Imagini/aparitie4.png">
+    <img id="imgaparitie4" src="Imagini/aparitie5.png">
+    <img id="imgaparitie4" src="Imagini/aparitie6.png">
+    <img id="imgaparitie4" src="Imagini/aparitie7.png">
+    <img id="imgaparitie4" src="Imagini/aparitie8.png">
+  </div>
+  <div id="aparitie5">
+    Atât Daimler cât și Benz lucrau noi motoare pentru noile lor autovehicole (atât de renumite). În 1889, Daimler îmbunătățește motorul cu ardere internă în patru timpi, construind un "doi cilindri în V", și aducând distribuția
+    la forma clasică de azi, "cu supapele în formă de ciupercuțe". În 1890, Wilhelm Maybach construiește primul "patru-cilindri", cu ardere internă în patru timpi. În 1892 apare primul automobil Peugeot cu o motorizare proprie de tip Otto.
+    Tot anul 1892 este un an special deoarece, inginerul german Rudolf Christian Karl Diesel, inventează motorul cu aprindere prin comprimare, pe scurt motorul diesel. După Lenoir și Otto apare invenția lui Diesel ca fiind de o importanță deosebită.
+    Motorul diesel este un motor cu combustie internă, cu aprindere prin compresie, în care combustibilul se detonează doar prin temperatura ridicată creată de comprimarea amestecului aer-carburant și nu prin utilizarea unui dispozitiv auxiliar, așa cum ar
+    fi bujia în cazul motorului pe benzină. Motorul operează utilizând ciclul diesel. Inginerul german Rudolf Diesel, care l-a inventat în 1892 și l-a patentat pe 23 februarie 1893 intenționa ca motorul său să utilizeze o varietate largă de combustibili inclusiv
+    praful de cărbune, parcă prevăzând peste veacuri necesitatea diversificării combustibililor și renunțarea treptată la combustibilii fosili petrolieri (aflați pe cale de dispariție).
+    <img id="imgaparitie5" src="Imagini/aparitie9.png">
+  </div>
+  <div id="aparitie6">
+    Diesel și-a prezentat invenția funcționând în 1900 la Expoziția Universală (World's Fair) utilizând ulei de alune (motorul diesel fiind atunci spre deosebire de utilizarea lui ulterioară destinat funcționării cu biocombustibili).
+    În iunie 1896 Ford construiește prima sa mașină, quadricicletă, la doi ani după Benz (vorbind de producția de serie). În 1903 uzina Ford se transformă în Ford Motor Company, luând astfel o amploare fără precedent și cunoscând un succes
+    remarcabil atât în state cât și pe bătrânul continent prin producția sa bogată și variată. Henry Ford (1863-1947) a inventat o linie de asamblare automobile proprie, automatizată, mult îmbunătățită, și a instalat prima bandă transportoare pe linia
+    sa automată de asamblare, în fabrica personală de autovehicule din Ford's Highland Park, uzina din Michigan, SUA, în 1913. Linia de asamblare a redus costurile de producție pentru autoturisme, prin reducerea timpului de asamblare. Ford trece astfel
+    de pe locul trei în lume (după Daimler și Benz), pe primul loc, devenind astfel numărul unu în producția mondială de autovehicule. În 1927 Ford fabricase deja 15 milioane de automobile numai din faimosul model T, care imediat după prima automatizare
+    s-a montat în numai 93 minute. Primul motor Ford a fost construit chiar de Henry în casa sa (artizanal), însă a funcționat foarte bine.
+  </div>
+  <div id="title1">
+    <h2>
+      Concluzie
+    </h2>
+  </div>
+  <div id="concluzie">
+    Dezvoltarea motoarelor cu ardere internă s-a făcut în permanență la cererea și cu sprijinul industriei automobilelor. Trebuie menționat că imediat după apariția sa, industria automobilelor a luat un start extraordinar și s-a impus ca prima industrie din lume,
+    atât cantitativ cât și calitativ, din care au derivat apoi multe alte ramuri ale industriei constructorului de mașini. Orice mare constructor de automobile a devenit ulterior și un constructor de locomotive și trenuri, un constructor de avioane, elicoptere și
+    aeronave, un constructor de șalupe, vapoare, etc. Roboții industriali, atât de răspândiți și diversificați astăzi, au luat ființă și s-au dezvoltat ca un sprijin permanent al industriei constructorului de autovehicule. Industria petrolieră și petrochimia s-au dezvoltat
+    și au luat amploare tocmai datorită industriei auto. La fel și cea electronică și electrotehnică, în fazele lor primordiale. Industria auto a creat și dezvoltat în permanență multiple locuri de muncă, a ajutat la diversificarea altor ramuri din industria constructorului
+    de mașini și din alte sectoare și domenii. Toată industria siderurgică și cea metalurgică s-au dezvoltat inițial datorită ei. Astăzi, nu mai putem concepe viața fără transport. Transporturile s-au dezvoltat și diversificat în toate direcțiile, devenind o componentă fundamentală a vieții noastre cotidiene.
+  </div>
+  <div id="concluzie">
+    Ce rol mai poate juca astăzi bătrânul motor Otto sau Diesel? Motoarele cu ardere internă sunt încă adânc ancorate în toate mediile de transport de azi, trăind într-o simbioză reală cu automobilele și cu alte mijloace de transport, însă în concurență permanentă cu alte tipuri de motoare. Principalul concurent al motoarelor cu ardere internă a fost și rămâne motorul electric.
+  </div>
   </body>
 </html>
