--- a/despre-noi/despre-noi.html
+++ b/despre-noi/despre-noi.html
@@ -8,10 +8,10 @@
     <body>
         <div class="navbar">
             <div class="stuff">
-              <a href="../contact/contact.html">Contact</a>
-              <a href="despre-noi.html">Despre noi</a>
-              <a href="../tipuri-de-motoare/tipuri-de-motoare.html">Tipuri de motoare</a>
-              <a href="../ce-este-motorul/ce-este-motorul.html">Ce este motorul ?</a>
+              <a class="hover" href="../contact/contact.html">Contact</a>
+              <a class="hover" href="despre-noi.html">Despre noi</a>
+              <a class="hover" href="../tipuri-de-motoare/tipuri-de-motoare.html">Tipuri de motoare</a>
+              <a class="hover" href="../ce-este-motorul/ce-este-motorul.html">Ce este motorul ?</a>
             </div>
             <img class="logo" src="../logo.svg" width="45" height="45" />
           </div>
