--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -8,20 +8,13 @@
     <body>
         <div class="navbar">
             <div class="stuff">
-              <a href="contact.html">Contact</a>
-              <a href="../despre-noi/despre-noi.html">Despre noi</a>
-              <a href="../tipuri-de-motoare/tipuri-de-motoare.html">Tipuri de motoare</a>
-              <a href="../ce-este-motorul/ce-este-motorul.html">Ce este motorul ?</a>
+              <a class="hover" href="contact.html">Contact</a>
+              <a class="hover" href="../despre-noi/despre-noi.html">Despre noi</a>
+              <a class="hover" href="../tipuri-de-motoare/tipuri-de-motoare.html">Tipuri de motoare</a>
+              <a class="hover" href="../ce-este-motorul/ce-este-motorul.html">Ce este motorul ?</a>
             </div>
             <img class="logo" src="../logo.svg" width="45" height="45" />
           </div>
-      <!--<div id="temporar">
-        <img id="temp" src="../work-in-progress.png" />
-        <p id="texttemp">
-          This page is currently in development<br>
-          Please try again later
-        </p>
-      </div>!-->
       <div id="contact">
         <p class="contact">
         Elev la "Colegiul National Calistrat Hogas" Tecuci<br>
