--- a/ce-este-motorul/ce-este-motorul.html
+++ b/ce-este-motorul/ce-este-motorul.html
@@ -16,7 +16,7 @@
       <img class="logo" src="../logo.svg" width="45" height="45" />
     </div>
     <div id="title">Istoria Motoarelor cu ardere interna</div>
-    <hr id="LMAO" />
+    <hr id="LMAO">
     <div id="ce-i-ala-motor">Ce este un motor cu ardere interna?</div>
     <div id="body">
       Motorul cu ardere internă este motorul care transformă energia chimică a
